k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vhm24-production
  labels:
    name: vhm24-production
    environment: production
    project: vhm24
